# sketchgraph_vs_sam

./: .gitignore  LICENCE  README.md  pyproject.toml
env/: env.yml
sketchgraphs_vs_sam/convert/: convert_constraint.py  convert_sequence.py
src/convert/: convert_constraint.py  convert_primitive.py  convert_sequence.py
tests/asset/: sg_t16_mini.npy
tests/asset/mock/: flat_array.py  source_fromflatarray.py
tests/unit/: test_convert_constraints.py  test_convert_primitive.py  test_convert_sequence.py
